fix broken css

--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,7 @@
   }
   62%,
   100% {
-    background: rgb(208, 76, 76);
+    background: rgb(196, 62, 62);
   }
 }
 
